# MachineLearningPlayground

./: Untitled.ipynb
Hands-on exercises workshop 1 and 2 of ML2/: Data exploration.ipynb  (+5 more)
ML3/WS2/: cnn.h5
ML4/Challenge/gymsnake1.0/: .gitignore  README.md  pyproject.toml  setup.py
ML4/Challenge/gymsnake1.0/src/gymsnake/: __init__.py
ML4/Challenge/gymsnake1.0/src/gymsnake.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ML4/Challenge/gymsnake1.0/src/gymsnake/envs/: __init__.py  controller.py  snake_env.py
ML4/Challenge/gymsnake1.0/tensorboard_logs/snake_dqn_agent/PPO_0/: events.out.tfevents.1696854136.DESKTOP-4DI86K9.6196.0
ML4/Challenge/gymsnake1.0/tests/: unittests.py
ML4/Challenge/gymsnake1.0/tests/stable_baselines3/: example_competition_SB3.py  example_multiplayer_agent.py  example_singleplayer_agent.py  expert_agent.py  multiplayer_agent_SB3.py  singleplayer_agent_SB3.py  singleplayer_agent_SB3_and_SB_and_new_and_old_snake.py
ML4/Challenge/gymsnake1.0/tests/stable_baselines3/tensorboard_logs/snake_agent/PPO_0/: events.out.tfevents.1696419140.laptop-Erco.28072.0  events.out.tfevents.1696419357.laptop-Erco.27216.0  events.out.tfevents.1696420787.laptop-Erco.35104.0  events.out.tfevents.1696421372.laptop-Erco.23068.0  events.out.tfevents.1696541321.laptop-Erco.30556.0  events.out.tfevents.1696683388.laptop-Erco.9320.0  events.out.tfevents.1696683841.laptop-Erco.35572.0  events.out.tfevents.1697112894.laptop-Erco.47608.0  events.out.tfevents.1697112936.laptop-Erco.40504.0
ML4/Challenge/gymsnake1.0/tests/stable_baselines3/testResults/: results_README.txt
(+131 files in other folders)
